--- a/style.css
+++ b/style.css
@@ -7,3 +7,70 @@ body,html{
     height: 100%;
     width: 100%;
 }
+.special-gothic-expanded-one-regular {
+  font-family: "Special Gothic Expanded One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+#main{
+    padding-top: 0.1px;
+    height: 100%;
+    width: 100%;
+    /* background-color: skyblue; */
+    background-color: #F8F8F8;
+    position: relative;
+
+}
+#nav{
+    margin-top: 40px;
+    height: 10vh;
+    width: 100%;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    /* background-color: coral; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+#nav h2{
+    /* background-color: blue; */
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 16% ;
+    font-size: 24px;
+    font-weight: 500;
+    border-right: 2px solid black;
+}
+#nav i{
+    padding-left: 3% ;
+    /* background-color: rgb(120, 9, 77); */
+    height: 100%;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    width: 16% ;
+    font-size: 30px;
+    font-weight: 100;
+    
+}
+#nav h1{
+    /* background-color: violet; */
+    height: 100%;
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3vw;
+    font-family: "Special Gothic Expanded One", sans-serif;
+   font-weight: 800;
+   font-style: normal;
+}
+#nav h2:nth-last-of-type(1){
+    /* background-color: rgb(26, 170, 76); */
+    height: 100%;
+    width: 22% ;
+}
