--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@ body,html{
 
 }
 #nav{
-    margin-top: 40px;
-    height: 10vh;
+    margin-top: 50px;
+    height: 11.5vh;
     width: 100%;
     border-top: 2px solid black;
     border-bottom: 2px solid black;
@@ -74,3 +74,76 @@ body,html{
     height: 100%;
     width: 22% ;
 }
+#center{
+    width: 100%;
+    height: 81.69%;
+    /* background-color: red; */
+    position: relative;
+    padding : 3vw;
+   
+}
+#content{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    /* background-color: gray;
+     */
+}
+#content video{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    
+}
+#overlay{
+    position: absolute;
+    bottom: 0;
+    /* background-color: blue; */
+    height: 50%;
+    width: 100%;
+    padding:  0 2.5vw ;
+    color: #F8F8F8;
+    background-color: rgba(0, 0, 0, 0.085);
+    backdrop-filter: blur(1px);
+    
+    
+}
+.over1{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+   
+}
+.over1 h1{
+    font-family: "Special Gothic Expanded One", sans-serif;
+    letter-spacing: 1px;
+    font-size: 3vw;
+    
+}
+.over1 h2{
+    padding: 2vw;
+    /* background-color: aqua; */
+    border-radius: 50%;
+    border: 1px solid white;
+    border-bottom: 2px solid white ;
+   font-size: 1.5vw;
+   font-weight: 100;
+}
+.over2 
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-top: 2px solid white; 
+    margin-top: 2vw;
+
+}
+.over2 h2{
+    /* background-color: aqua; */
+   font-size: 1.5vw;
+   font-weight: 100;
+}
+
+
+
