--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 body,html{
+      background-color: #F8F8F8;
     height: 100%;
     width: 100%;
 }
@@ -184,3 +185,47 @@ body,html{
     }
     
 }
+#alpha{
+    
+    width: 100%;
+    height: 15vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: red; */
+    gap: 1vw;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    margin-top: 2vw;
+}
+#alpha h5{
+    margin-right: 1vw;
+    font-size: 1.5vw;
+    font-weight: 500;
+    text-transform: uppercase;
+    font-style: italic;
+    border-bottom: 2px solid black;
+    /* background-color: gray; */
+}
+#alpha h6{
+    font-size: 1.2vw;
+    font-weight: 400;
+    text-transform: uppercase;
+    font-style: italic;
+    padding: 0.6vw 0.8vw;
+    /* background-color: blue; */
+    border-radius: 50%;
+    transition: all ease 0.1s;
+}
+#alpha h6:hover{
+    border: 2px solid black;
+    background-color: rgba(0, 0, 0, 0.214);
+    backdrop-filter: blur(2px);
+    
+    
+    cursor: pointer;
+
+}
+
+
+
