--- a/style.css
+++ b/style.css
@@ -226,6 +226,65 @@ body,html{
     cursor: pointer;
 
 }
+#page2{
+    height: 100%;
+    width: 100%;
+    padding: 5vw 3vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* background-color: wheat; */
+}
+.part-1{
+    width: 50%;
+    height: 100%;
+    background-image: url(https://images.unsplash.com/photo-1500336624523-d727130c3328?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixclass=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-size: cover; 
+    
+    background-position: center;
 
+
+}
+ .part-2 img{
+    width: 100%;
+    height: 70%;
+    display: block;
+    object-fit: cover;
+    object-position: center;
+
+} 
+.part-2{
+    width: 46%;
+    height: 100%;
+   
+
+}
+.box{
+    width: 100%;
+    height:28% ;
+    /* background-color: blue; */
+    margin-top: 1vw;
+    display: flex;
+    justify-content: space-between;
+    
+}
+.box p{
+    /* background-color: rgb(201, 92, 92); */
+    height: 40%;
+    width: 50%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 1.1vw;
+    
+}
+.box h5{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.7vw;
+    height: 100%;
+    font-weight: 600;
+    width: 33%;
+    /* background-color: aqua; */
+    
+}
 
 
