--- a/style.css
+++ b/style.css
@@ -286,5 +286,76 @@ body,html{
     /* background-color: aqua; */
     
 }
+#page-3{
+    padding: 3vw;
+    
+    height: 100%;
+    width: 100%;
+    /* background-color: gray; */
+}
+#page-3>h1{
+    /* background-color: aqua; */
+    width: 100%;
+    font-family: "Special Gothic Expanded One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 3.5vw;
+    text-align: center;
+    margin-bottom: 3vw;
+}
+.elem{
+    position: relative;
+    border-top: 2px solid black;
+    width: 100%;
+    height: 8vw;
+    padding: 2vw;
+    /* background-color: navajowhite; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
+}
 
+.elem h4{
+    /* background-color: lightcoral; */
+    width: 6%;
+    font-size: 1.2vw;
+    font-weight: 500;
+}
+.elem-2{
+    /* background-color: green; */
+    width: 50%;
+}
+.elem-2 h2{
+    font-size: 3vw;
+    font-weight: 100;
+
+}
+.elem-2 h5{
+    font-size: 1vw;
+    font-weight: 600;
+    
+}
+.last
+{
+    border-bottom: 2px solid black;
+}
+.elem img{
+    transition: all ease-in-out 0.8s;
+    opacity: 0;
+    position: absolute;
+    height: 110px;
+    width: 120px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: top;
+    left: 20%;
+}
+.elem:hover img
+{
+    opacity: 1;
+    
+}
+.elem:hover{
+    background-color: #dddada;
+}
