--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body,html{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
 
 }
 #nav h2{
@@ -69,6 +70,7 @@ body,html{
     font-family: "Special Gothic Expanded One", sans-serif;
    font-weight: 800;
    font-style: normal;
+   position: relative;
 }
 #nav h2:nth-last-of-type(1){
     /* background-color: rgb(26, 170, 76); */
@@ -359,3 +361,71 @@ body,html{
 .elem:hover{
     background-color: #dddada;
 }
+footer{
+    padding: 1vw;
+    width: 100%;
+    /* background-color: red; */
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    
+}
+footer::-webkit-scrollbar{
+    display: none;
+}
+footer h1{
+    display: inline-block;
+    font-size: 3.5vw;
+    letter-spacing: 3px;
+    word-spacing: 5px;
+    line-height: 1;
+    font-weight: 800;
+    text-transform: uppercase;
+    font-family: "Special Gothic Expanded One", sans-serif;
+    font-style: normal;
+    -webkit-text-stroke:2px black;
+    color: transparent;
+    animation-name: anime;
+    animation-timing-function: linear;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+
+
+}
+
+#nav h1::after
+{
+    content: "\00A9 ";
+    font-size: 20px;
+    position: absolute;
+    top: 20%;
+    right: 17%;
+    font-family: sans-serif;
+    
+
+    
+    
+
+}
+#nav h1::before
+{
+    content: "model management ";
+    font-size: 15px;
+    position: absolute;
+    bottom: 4%;
+    right: 20%;
+    font-family: sans-serif;
+    font-weight: 300;
+    color: #666;
+
+    
+    
+
+}
+.blank{
+    width: 100%;
+    height: 30px;
+}
+
